--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
           </h2>
         </div>
         <div class="carousel-item caro1">
-          <img src="assets/cheesecake.jpg"
-            class="d-block w-100">
-            <h1 class="abertura">Cheesecake com frutas!</h1>
+          <img src="assets/cheesecake.jpg" class="d-block w-100">
+          <h1 class="abertura">Cheesecake com frutas!</h1>
         </div>
         <div class="carousel-item caro1">
           <img src="assets/sorvete.jpg" class="d-block w-100">
@@ -164,7 +163,7 @@
       </button>
     </div>
   </div><!--carrossel-end-->
-  <hr>  
+  <hr>
   <h1 class="categorias-main">Categorias</h1>
   <hr>
   <div class="icons-main">
@@ -187,7 +186,7 @@
     </div>
   </div>
   <section>
-      <hr>
+    <hr>
     <div class="cards-main">
       <h1 class="rec-title" data-aos="fade-up">Receitas</h1>
       <div class="cards">
@@ -204,7 +203,7 @@
             </div>
           </a>
         </div>
-  
+
         <div class="cartao" data-aos="fade-up">
           <a href="">
             <img src="assets/alpomodoro.jpg" alt="Massa Italiana" class="cartao-img">
@@ -218,7 +217,7 @@
             </div>
           </a>
         </div>
-  
+
         <div class="cartao" data-aos="fade-up">
           <a href="">
             <img src="assets/cheesecake.jpg" alt="Sobremesa" class="cartao-img">
@@ -232,7 +231,7 @@
             </div>
           </a>
         </div>
-  
+
         <div class="cartao" data-aos="fade-up">
           <a href="">
             <img src="assets/salmao.png" alt="Prato Saudável" class="cartao-img">
@@ -246,7 +245,7 @@
             </div>
           </a>
         </div>
-  
+
         <div class="cartao" data-aos="fade-up">
           <a href="">
             <img src="assets/panqueca.png" alt="Café da Manhã" class="cartao-img">
@@ -260,7 +259,7 @@
             </div>
           </a>
         </div>
-  
+
         <div class="cartao" data-aos="fade-up">
           <a href="">
             <img src="assets/brownie.jpg" alt="Sobremesa Especial" class="cartao-img">
