--- a/upload-post-index.html
+++ b/upload-post-index.html
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/marsal.png" type="image/png">
+  <link rel="icon" href="assets/marsal.png" type="image/png">
 </head>
 
 <body>
@@ -38,7 +38,8 @@
             </ul>
           </li>
           <li class="nav-item-1">
-            <a class="login" onclick="inpLogin()"><img class="usr-img" src="assets/user.svg" alt="Usuário" height="25px" width="25px"></a>
+            <a class="login" onclick="inpLogin()"><img class="usr-img" src="assets/user.svg" alt="Usuário" height="25px"
+                width="25px"></a>
           </li>
         </ul>
       </div>
@@ -77,7 +78,8 @@
               Ingredientes
             </span>
           </label>
-          <textarea class="form-control" id="recipeIngredients" rows="3" placeholder="Digite os ingredientes da receita"></textarea>
+          <textarea class="form-control" id="recipeIngredients" rows="3"
+            placeholder="Digite os ingredientes da receita"></textarea>
         </div>
         <div class="mb-3">
           <label for="recipeInstructions" class="form-label">
@@ -85,7 +87,8 @@
               Modo de Preparo
             </span>
           </label>
-          <textarea class="form-control" id="recipeInstructions" rows="5" placeholder="Digite o modo de preparo da receita"></textarea>
+          <textarea class="form-control" id="recipeInstructions" rows="5"
+            placeholder="Digite o modo de preparo da receita"></textarea>
         </div>
         <div class="mb-3">
           <label for="recipeImage" class="form-label">
@@ -125,7 +128,7 @@
       <div class="footer-bottom"></div>
     </div>
   </footer>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="javascript/script.js"></script>
 </body>
 
