--- a/vegetariano-index.html
+++ b/vegetariano-index.html
@@ -124,8 +124,8 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                 <h3 class="cartao-title">Mousse de maracujá</h3>
                 <p class="cartao-text">Uma receita refrescante para adocicar seu dia.</p>
                 <div class="cartao-footer">
-                  <span><i class="fa-regular fa-clock"></i>30min</span>
-                  <span><i class="fa-regular fa-heart"></i>700</span>
+                  <span><i class="fa-regular fa-clock"></i> 30min</span>
+                  <span><i class="fa-regular fa-heart"></i> 700</span>
                 </div>
               </div>
             </a>
@@ -138,8 +138,8 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                 <h3 class="cartao-title">Brownie</h3>
                 <p class="cartao-text">Um doce para aqueles que amam chocolate e noses.</p>
                 <div class="cartao-footer">
-                  <span><i class="fa-regular fa-clock"></i>1h</span>
-                  <span><i class="fa-regular fa-heart"></i>900</span>
+                  <span><i class="fa-regular fa-clock"></i> 1h</span>
+                  <span><i class="fa-regular fa-heart"></i> 900</span>
                 </div>
               </div>
             </a>
@@ -163,7 +163,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
             <a href="">
               <img src="assets/receitas-vegetarianas-baratas-p.jpg" alt="Prato Saudável" class="cartao-img">
               <div class="cartao-content">
-                <h3 class="cartao-title">Pizza de legumes/h3>
+                <h3 class="cartao-title">Pizza de legumes</h3>
                   <p class="cartao-text">Uma mistura perfeita entre o queijo e ardência da pimenta,essa receita irá te
                     surpreender.</p>
                   <div class="cartao-footer">
@@ -181,7 +181,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                 <h3 class="cartao-title">Nozes,batatas e salada</h3>
                 <p class="cartao-text">Um almoço completo com todos os nutrientes necessários para um bom dia.</p>
                 <div class="cartao-footer">
-                  <span><i class="fa-regular fa-clock"></i> 40 min</span>
+                  <span><i class="fa-regular fa-clock"></i> 40 minutos</span>
                   <span><i class="fa-regular fa-heart"></i> 998</span>
                 </div>
               </div>
@@ -195,7 +195,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                 <h3 class="cartao-title">Torta de maça</h3>
                 <p class="cartao-text">Uma sobremesa para impressionar as visitas com sua beleza e sabor</p>
                 <div class="cartao-footer">
-                  <span><i class="fa-regular fa-clock"></i> 40 min</span>
+                  <span><i class="fa-regular fa-clock"></i> 40 minutos</span>
                   <span><i class="fa-regular fa-heart"></i> 845</span>
                 </div>
               </div>
@@ -214,8 +214,8 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
               <h3 class="cartao-title">Brigadeiro de Pistache</h3>
               <p class="cartao-text"></p>
               <div class="cartao-footer">
-                <span><i class="fa-regular fa-clock"></i>40min</span>
-                <span><i class="fa-regular fa-heart"></i>450</span>
+                <span><i class="fa-regular fa-clock"></i> 40 minutos</span>
+                <span><i class="fa-regular fa-heart"></i> 450</span>
               </div>
             </div>
           </a>
@@ -228,8 +228,8 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
               <h3 class="cartao-title">Doce de leite</h3>
               <p class="cartao-text"></p>
               <div class="cartao-footer">
-                <span><i class="fa-regular fa-clock"></i>2h</span>
-                <span><i class="fa-regular fa-heart"></i>500</span>
+                <span><i class="fa-regular fa-clock"></i> 2 Horas</span>
+                <span><i class="fa-regular fa-heart"></i> 500</span>
               </div>
             </div>
           </a>
@@ -242,8 +242,8 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
               <h3 class="cartao-title">Torta de chocolate branco e morango</h3>
               <p class="cartao-text"></p>
               <div class="cartao-footer">
-                <span><i class="fa-regular fa-clock"></i> 1h</span>
-                <span><i class="fa-regular fa-heart"></i>756</span>
+                <span><i class="fa-regular fa-clock"></i> 1 Hora</span>
+                <span><i class="fa-regular fa-heart"></i> 756</span>
               </div>
             </div>
           </a>
@@ -256,7 +256,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
               <h3 class="cartao-title">Pudim de leite de castanha</h3>
               <p class="cartao-text"></p>
               <div class="cartao-footer">
-                <span><i class="fa-regular fa-clock"></i> 2h</span>
+                <span><i class="fa-regular fa-clock"></i> 2 Horas</span>
                 <span><i class="fa-regular fa-heart"></i> 897</span>
               </div>
             </div>
@@ -270,7 +270,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
               <h3 class="cartao-title">Bolo de banana</h3>
               <p class="cartao-text"></p>
               <div class="cartao-footer">
-                <span><i class="fa-regular fa-clock"></i> 40 min</span>
+                <span><i class="fa-regular fa-clock"></i> 40 Minutos</span>
                 <span><i class="fa-regular fa-heart"></i> 458</span>
               </div>
             </div>
@@ -284,7 +284,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
               <h3 class="cartao-title">Sorvete de morango</h3>
               <p class="cartao-text"></p>
               <div class="cartao-footer">
-                <span><i class="fa-regular fa-clock"></i>1h</span>
+                <span><i class="fa-regular fa-clock"></i> 1 Hora</span>
                 <span><i class="fa-regular fa-heart"></i> 755</span>
               </div>
             </div>
@@ -303,8 +303,8 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
           <h3 class="cartao-title">Hamburger de grão-de-bico</h3>
           <p class="cartao-text"></p>
           <div class="cartao-footer">
-            <span><i class="fa-regular fa-clock"></i>30min</span>
-            <span><i class="fa-regular fa-heart"></i>700</span>
+            <span><i class="fa-regular fa-clock"></i> 30 minutos</span>
+            <span><i class="fa-regular fa-heart"></i> 700</span>
           </div>
         </div>
       </a>
@@ -317,8 +317,8 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
           <h3 class="cartao-title">Sufle de legumes e queijo</h3>
           <p class="cartao-text"></p>
           <div class="cartao-footer">
-            <span><i class="fa-regular fa-clock"></i>1h</span>
-            <span><i class="fa-regular fa-heart"></i>900</span>
+            <span><i class="fa-regular fa-clock"></i> 1 hora</span>
+            <span><i class="fa-regular fa-heart"></i> 900</span>
           </div>
         </div>
       </a>
@@ -345,7 +345,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
           <h3 class="cartao-title">Espertinho de carne de soja</h3>
           <p class="cartao-text"></p>
           <div class="cartao-footer">
-            <span><i class="fa-regular fa-clock"></i> 2h min</span>
+            <span><i class="fa-regular fa-clock"></i> 2 horas</span>
             <span><i class="fa-regular fa-heart"></i> 1016</span>
           </div>
         </div>
@@ -359,7 +359,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
           <h3 class="cartao-title">Rocambole folheado de Berinjela</h3>
           <p class="cartao-text"></p>
           <div class="cartao-footer">
-            <span><i class="fa-regular fa-clock"></i> 40 min</span>
+            <span><i class="fa-regular fa-clock"></i> 40 minutos</span>
             <span><i class="fa-regular fa-heart"></i> 998</span>
           </div>
         </div>
@@ -373,7 +373,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
           <h3 class="cartao-title">Croquete de lentilha</h3>
           <p class="cartao-text"></p>
           <div class="cartao-footer">
-            <span><i class="fa-regular fa-clock"></i> 40 min</span>
+            <span><i class="fa-regular fa-clock"></i> 40 minutos</span>
             <span><i class="fa-regular fa-heart"></i> 845</span>
           </div>
         </div>
