--- a/vegetariano-index.html
+++ b/vegetariano-index.html
@@ -124,7 +124,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                 <h3 class="cartao-title">Mousse de maracujá</h3>
                 <p class="cartao-text">Uma receita refrescante para adocicar seu dia.</p>
                 <div class="cartao-footer">
-                  <span><i class="fa-regular fa-clock"></i> 30min</span>
+                  <span><i class="fa-regular fa-clock"></i> 30 minutos</span>
                   <span><i class="fa-regular fa-heart"></i> 700</span>
                 </div>
               </div>
@@ -138,7 +138,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                 <h3 class="cartao-title">Brownie</h3>
                 <p class="cartao-text">Um doce para aqueles que amam chocolate e noses.</p>
                 <div class="cartao-footer">
-                  <span><i class="fa-regular fa-clock"></i> 1h</span>
+                  <span><i class="fa-regular fa-clock"></i> 1 hora</span>
                   <span><i class="fa-regular fa-heart"></i> 900</span>
                 </div>
               </div>
@@ -152,7 +152,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                 <h3 class="cartao-title">Sufflê de Brócolis</h3>
                 <p class="cartao-text">Uma opção recheada de queijo e brócolis,ótima para acompanhar seu dia.</p>
                 <div class="cartao-footer">
-                  <span><i class="fa-regular fa-clock"></i> 50 min</span>
+                  <span><i class="fa-regular fa-clock"></i> 50 minutos</span>
                   <span><i class="fa-regular fa-heart"></i> 699</span>
                 </div>
               </div>
@@ -167,7 +167,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
                   <p class="cartao-text">Uma mistura perfeita entre o queijo e ardência da pimenta,essa receita irá te
                     surpreender.</p>
                   <div class="cartao-footer">
-                    <span><i class="fa-regular fa-clock"></i> 2h min</span>
+                    <span><i class="fa-regular fa-clock"></i> 2 horas</span>
                     <span><i class="fa-regular fa-heart"></i> 1016</span>
                   </div>
               </div>
@@ -270,7 +270,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
               <h3 class="cartao-title">Bolo de banana</h3>
               <p class="cartao-text"></p>
               <div class="cartao-footer">
-                <span><i class="fa-regular fa-clock"></i> 40 Minutos</span>
+                <span><i class="fa-regular fa-clock"></i> 40 minutos</span>
                 <span><i class="fa-regular fa-heart"></i> 458</span>
               </div>
             </div>
@@ -331,7 +331,7 @@ https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14.
           <h3 class="cartao-title">Couve flor gratinada</h3>
           <p class="cartao-text"></p>
           <div class="cartao-footer">
-            <span><i class="fa-regular fa-clock"></i> 50 min</span>
+            <span><i class="fa-regular fa-clock"></i> 50 minutos</span>
             <span><i class="fa-regular fa-heart"></i> 699</span>
           </div>
         </div>
